{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 153,
  "lineage": "f0dbe8a7-de5f-5d56-67bb-510a8e29dbc5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "allow_office_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0d73641d929723837",
            "description": "Allow HTTP inbound traffic from Office",
            "filter": null,
            "id": "sg-0d73641d929723837",
            "name": "useast1d_allow_office_http",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_office_http",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "allow_office_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-00e4846ac77e3f455",
            "description": "Allow SSH inbound traffic from Office",
            "filter": null,
            "id": "sg-00e4846ac77e3f455",
            "name": "useast1d_allow_office_ssh",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_office_ssh",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "allow_vpc_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0bf7956f092c26456",
            "description": "Allow HTTP inbound traffic from VPC",
            "filter": null,
            "id": "sg-0bf7956f092c26456",
            "name": "useast1d_allow_vpc_http",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_http",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "allow_vpc_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-08e036c842971fca0",
            "description": "Allow SSH inbound traffic from VPC",
            "filter": null,
            "id": "sg-08e036c842971fca0",
            "name": "useast1d_allow_vpc_ssh",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_ssh",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets_private_list",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "subnet-0164421d52b4e9b6b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-0164421d52b4e9b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "id": "subnet-0164421d52b4e9b6b",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_private_a",
              "Namespace": "useast1d",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        },
        {
          "index_key": "subnet-08f87e877ece823dc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-08f87e877ece823dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "default_for_az": false,
            "id": "subnet-08f87e877ece823dc",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_private_c",
              "Namespace": "useast1d",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        },
        {
          "index_key": "subnet-0d225e0e0f936a33b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-0d225e0e0f936a33b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "id": "subnet-0d225e0e0f936a33b",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_private_b",
              "Namespace": "useast1d",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:vpc/vpc-0bf2700a887db25fd",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00c255356b13d38f2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-8f56eaf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bf2700a887db25fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017ff455094a31f52",
            "owner_id": "411395035331",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_vpc",
              "Namespace": "useast1d"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "linuxwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/app/useast1d-linuxwordpress/f010da4719a2a9f7",
            "arn_suffix": "app/useast1d-linuxwordpress/f010da4719a2a9f7",
            "dns_name": "useast1d-linuxwordpress-1296390454.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/app/useast1d-linuxwordpress/f010da4719a2a9f7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "useast1d-linuxwordpress",
            "security_groups": [
              "sg-0bf7956f092c26456",
              "sg-0d73641d929723837"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e76814f1543d4e3"
              },
              {
                "subnet_id": "subnet-08274650c7309b6d2"
              },
              {
                "subnet_id": "subnet-0aafb89244145f716"
              }
            ],
            "subnets": [
              "subnet-07e76814f1543d4e3",
              "subnet-08274650c7309b6d2",
              "subnet-0aafb89244145f716"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_alb_linuxwordpress",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "linuxwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:listener/app/useast1d-linuxwordpress/f010da4719a2a9f7/6c7b710debbd6fa5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-linuxwordpress/45caadf10ef40447",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:listener/app/useast1d-linuxwordpress/f010da4719a2a9f7/6c7b710debbd6fa5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/app/useast1d-linuxwordpress/f010da4719a2a9f7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.linuxwordpress",
            "aws_lb_target_group.linuxwordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "linuxwordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-linuxwordpress/45caadf10ef40447",
            "arn_suffix": "targetgroup/useast1d-linuxwordpress/45caadf10ef40447",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-linuxwordpress/45caadf10ef40447",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "useast1d-linuxwordpress",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_linuxwordpress_targetgroup",
              "Namespace": "useast1d"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_vpc_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-02e26a68aa09fa77b",
            "description": "Allow MySQL inbound traffic from Private Servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e26a68aa09fa77b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.13.0/24",
                  "10.0.12.0/24"
                ],
                "description": "Allow MySQL inbound traffic from Private Servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "useast1d_allow_vpc_mysql",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_mysql",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          }
        }
      ]
    }
  ]
}